<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/navigation_view"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/username_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/user_name"
            android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/password_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/conform_password_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conform_password"
            android:layout_marginTop="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="24dp"
            android:background="@color/color_blue"
            android:textColor="@color/white"
            android:text="@string/sign_up"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>