<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <include
        android:id="@+id/found_transfer_title_view"
        layout="@layout/navigation_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/found_transfer_title_view" >

        <Spinner
            android:id="@+id/found_transfer_payee_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/backwithborder"
            android:layout_marginBottom="4dp"
            android:padding="@dimen/activity_horizontal_margin"/>

        <EditText
            android:id="@+id/found_transfer_amount_edtxt"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:hint="@string/amount_hint"
            android:background="@drawable/backwithborder"
            android:selectAllOnFocus="true"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/found_transfer_payee_list_spinner" />

        <EditText
            android:id="@+id/found_transfer_desc_edtxt"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/backwithborder"
            android:hint="@string/description_hint"
            android:inputType="textPassword"
            android:gravity="top"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@+id/found_transfer_amount_edtxt"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@color/color_blue"
            android:layout_marginTop="@dimen/vertical_margin_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/found_transfer_desc_edtxt"
            android:text="@string/transfer_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>